Sec46_Chap409-XXX: optimized code